Remove grid modes Add some support for flexible runs

--- a/todo.txt
+++ b/todo.txt
@@ -19,3 +19,6 @@ Water velocity (preferred direction based on position on grid)
 What parameters model different school types
 
 data:
+sensitivity analysis for parameters.
+
+
